xlib/Xlib.h

#  define libX11 "libX11.so"
typedef unsigned long XID;
typedef unsigned long Time;
typedef unsigned long Atom;
typedef XID Pixmap;
typedef XID Font;
typedef XID GContext;
typedef XID VisualID;
typedef XID Window;
typedef XID Colormap;
typedef XID Cursor;
typedef XID Drawable;
typedef XID KeySym;
typedef unsigned char KeyCode;
typedef char *XPointer;
typedef int Bool;
typedef int Status;
typedef struct _XExtData {
	int number;		
	struct _XExtData *next;	
	int (*free_private)(	
	struct _XExtData *extension
	);
	XPointer private_data;	
} XExtData;
typedef struct {		
	int extension;		
	int major_opcode;	
	int first_event;	
	int first_error;	
} XExtCodes;
typedef struct {
    int depth;
    int bits_per_pixel;
    int scanline_pad;
} XPixmapFormatValues;
typedef struct {
	int function;		
	unsigned long plane_mask;
	unsigned long foreground;
	unsigned long background;
	int line_width;		
	int line_style;	 	
	int cap_style;	  	
	int join_style;	 	
	int fill_style;	 	
	int fill_rule;	  	
	int arc_mode;		
	Pixmap tile;		
	Pixmap stipple;		
	int ts_x_origin;	
	int ts_y_origin;
        Font font;	        
	int subwindow_mode;     
	Bool graphics_exposures;
	int clip_x_origin;	
	int clip_y_origin;
	Pixmap clip_mask;	
	int dash_offset;	
	char dashes;
} XGCValues;
typedef struct _XGC
{
    XExtData *ext_data;	
    GContext gid;	
} GC;
typedef struct {
	XExtData *ext_data;	
	VisualID visualid;	
	int class;		
	unsigned long red_mask, green_mask, blue_mask;	
	int bits_per_rgb;	
	int map_entries;	
} Visual;
typedef struct {
	int depth;		
	int nvisuals;		
	Visual *visuals;	
} Depth;
struct _XDisplay;		
typedef struct {
	XExtData *ext_data;	
	struct _XDisplay *display;
	Window root;		
	int width, height;	
	int mwidth, mheight;	
	int ndepths;		
	Depth *depths;		
	int root_depth;		
	Visual *root_visual;	
	GC default_gc;		
	Colormap cmap;		
	unsigned long white_pixel;
	unsigned long black_pixel;	
	int max_maps, min_maps;	
	int backing_store;	
	Bool save_unders;
	long root_input_mask;	
} Screen;
typedef struct {
	XExtData *ext_data;	
	int depth;		
	int bits_per_pixel;	
	int scanline_pad;	
} ScreenFormat;
typedef struct {
    Pixmap background_pixmap;	
    unsigned long background_pixel;	
    Pixmap border_pixmap;	
    unsigned long border_pixel;	
    int bit_gravity;		
    int win_gravity;		
    int backing_store;		
    unsigned long backing_planes;
    unsigned long backing_pixel;
    Bool save_under;		
    long event_mask;		
    long do_not_propagate_mask;	
    Bool override_redirect;	
    Colormap colormap;		
    Cursor cursor;		
} XSetWindowAttributes;
typedef struct {
	int family;		
	int length;		
	char *address;		
} XHostAddress;
typedef struct {
    int x, y;
    int width, height;
    int border_width;
    Window sibling;
    int stack_mode;
} XWindowChanges;
typedef struct {
	unsigned long pixel;
	unsigned short red, green, blue;
	char flags;  
	char pad;
} XColor;
struct _XPrivate;		
struct _XrmHashBucketRec;
typedef struct
_XDisplay
{
	XExtData *ext_data;	
	struct _XPrivate *private1;
	int fd;			
	int private2;
	int proto_major_version;
	int proto_minor_version;
	char *vendor;		
        XID private3;
	XID private4;
	XID private5;
	int private6;
	XID (*resource_alloc)(	
		struct _XDisplay*
	);
	int byte_order;		
	int bitmap_unit;	
	int bitmap_pad;		
	int bitmap_bit_order;	
	int nformats;		
	ScreenFormat *pixmap_format;	
	int private8;
	int release;		
	struct _XPrivate *private9, *private10;
	int qlen;		
	unsigned long last_request_read; 
	unsigned long request;	
	XPointer private11;
	XPointer private12;
	XPointer private13;
	XPointer private14;
	unsigned max_request_size; 
	struct _XrmHashBucketRec *db;
	int (*private15)(
		struct _XDisplay*
		);
	char *display_name;	
	int default_screen;	
	int nscreens;		
	Screen *screens;	
	unsigned long motion_buffer;	
	unsigned long private16;
	int min_keycode;	
	int max_keycode;	
	XPointer private17;
	XPointer private18;
	int private19;
	char *xdefaults;	
} Display;
typedef struct {
	int type;		
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;	        
	Window root;	        
	Window subwindow;	
	Time time;		
	int x, y;		
	int x_root, y_root;	
	unsigned int state;	
	unsigned int keycode;	
	Bool same_screen;	
} XKeyEvent;
typedef struct {
	int type;
	Display *display;	
	XID resourceid;		
	unsigned long serial;	
	unsigned char error_code;	
	unsigned char request_code;	
	unsigned char minor_code;	
} XErrorEvent;
typedef union _XEvent {
        int type;		
	XAnyEvent xany;
	XKeyEvent xkey;
	XButtonEvent xbutton;
	XMotionEvent xmotion;
	XCrossingEvent xcrossing;
	XFocusChangeEvent xfocus;
	XExposeEvent xexpose;
	XGraphicsExposeEvent xgraphicsexpose;
	XNoExposeEvent xnoexpose;
	XVisibilityEvent xvisibility;
	XCreateWindowEvent xcreatewindow;
	XDestroyWindowEvent xdestroywindow;
	XUnmapEvent xunmap;
	XMapEvent xmap;
	XMapRequestEvent xmaprequest;
	XReparentEvent xreparent;
	XConfigureEvent xconfigure;
	XGravityEvent xgravity;
	XResizeRequestEvent xresizerequest;
	XConfigureRequestEvent xconfigurerequest;
	XCirculateEvent xcirculate;
	XCirculateRequestEvent xcirculaterequest;
	XPropertyEvent xproperty;
	XSelectionClearEvent xselectionclear;
	XSelectionRequestEvent xselectionrequest;
	XSelectionEvent xselection;
	XColormapEvent xcolormap;
	XClientMessageEvent xclient;
	XMappingEvent xmapping;
	XErrorEvent xerror;
	XKeymapEvent xkeymap;
	XGenericEvent xgeneric;
	XGenericEventCookie xcookie;
	long pad[24];
} XEvent;
typedef struct {
    short	lbearing;	
    short	rbearing;	
    short	width;		
    short	ascent;		
    short	descent;	
    unsigned short attributes;	
} XCharStruct;
typedef struct {
    Atom name;
    unsigned long card32;
} XFontProp;
typedef struct {
    XExtData	*ext_data;	
    Font        fid;            
    unsigned	direction;	
    unsigned	min_char_or_byte2;
    unsigned	max_char_or_byte2;
    unsigned	min_byte1;	
    unsigned	max_byte1;	
    Bool	all_chars_exist;
    unsigned	default_char;	
    int         n_properties;   
    XFontProp	*properties;	
    XCharStruct	min_bounds;	
    XCharStruct	max_bounds;	
    XCharStruct	*per_char;	
    int		ascent;		
    int		descent;	
} XFontStruct;
typedef union { Display *display;
		GC gc;
		Visual *visual;
		Screen *screen;
		ScreenFormat *pixmap_format;
		XFontStruct *font; } XEDataObject;
extern Atom XInternAtom(
    Display*		,
    char*	,
    Bool		
);
extern Status XInternAtoms(
    Display*		,
    char**		,
    int			,
    Bool		,
    Atom*		
);
extern Colormap XCopyColormapAndFree(
    Display*		,
    Colormap		
);
extern Colormap XCreateColormap(
    Display*		,
    Window		,
    Visual*		,
    int			
);
extern Cursor XCreatePixmapCursor(
    Display*		,
    Pixmap		,
    Pixmap		,
    XColor*		,
    XColor*		,
    unsigned int	,
    unsigned int	
);
extern Cursor XCreateGlyphCursor(
    Display*		,
    Font		,
    Font		,
    unsigned int	,
    unsigned int	,
    XColor *	,
    XColor *	
);
extern Cursor XCreateFontCursor(
    Display*		,
    unsigned int	
);
extern Font XLoadFont(
    Display*		,
    char*	
);
extern GC XCreateGC(
    Display*		,
    Drawable		,
    unsigned long	,
    XGCValues*		
);
extern GContext XGContextFromGC(
    GC			
);
extern void XFlushGC(
    Display*		,
    GC			
);
extern Pixmap XCreatePixmap(
    Display*		,
    Drawable		,
    unsigned int	,
    unsigned int	,
    unsigned int	
);
extern Pixmap XCreateBitmapFromData(
    Display*		,
    Drawable		,
    char*	,
    unsigned int	,
    unsigned int	
);
extern Pixmap XCreatePixmapFromBitmapData(
    Display*		,
    Drawable		,
    char*		,
    unsigned int	,
    unsigned int	,
    unsigned long	,
    unsigned long	,
    unsigned int	
);
extern Window XCreateSimpleWindow(
    Display*		,
    Window		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    unsigned int	,
    unsigned long	,
    unsigned long	
);
extern Window XGetSelectionOwner(
    Display*		,
    Atom		
);
extern Window XCreateWindow(
    Display*		,
    Window		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    unsigned int	,
    int			,
    unsigned int	,
    Visual*		,
    unsigned long	,
    XSetWindowAttributes*	
);
extern Colormap *XListInstalledColormaps(
    Display*		,
    Window		,
    int*		
);
extern char **XListFonts(
    Display*		,
    char*	,
    int			,
    int*		
);
extern char **XListFontsWithInfo(
    Display*		,
    char*	,
    int			,
    int*		,
    XFontStruct**	
);
extern char **XGetFontPath(
    Display*		,
    int*		
);
extern char **XListExtensions(
    Display*		,
    int*		
);
extern Atom *XListProperties(
    Display*		,
    Window		,
    int*		
);
extern XHostAddress *XListHosts(
    Display*		,
    int*		,
    Bool*		
);
extern KeySym XKeycodeToKeysym(
    Display*		,
    KeyCode		,
    int			
);
extern KeySym XLookupKeysym(
    XKeyEvent*		,
    int			
);
extern KeySym *XGetKeyboardMapping(
    Display*		,
    KeyCode		,
    int			,
    int*		
);
extern KeySym XStringToKeysym(
    char*	
);
extern long XMaxRequestSize(
    Display*		
);
extern long XExtendedMaxRequestSize(
    Display*		
);
extern char *XResourceManagerString(
    Display*		
);
extern char *XScreenResourceString(
	Screen*		
);
extern unsigned long XDisplayMotionBufferSize(
    Display*		
);
extern VisualID XVisualIDFromVisual(
    Visual*		
);
extern Status XInitThreads(
    void
);
extern void XLockDisplay(
    Display*		
);
extern void XUnlockDisplay(
    Display*		
);
extern XExtCodes *XInitExtension(
    Display*		,
    char*	
);
extern XExtCodes *XAddExtension(
    Display*		
);
extern XExtData *XFindOnExtensionList(
    XExtData**		,
    int			
);
extern XExtData **XEHeadOfExtensionList(
    XEDataObject	
);
extern Window XRootWindow(
    Display*		,
    int			
);
extern Window XDefaultRootWindow(
    Display*		
);
extern Window XRootWindowOfScreen(
    Screen*		
);
extern Visual *XDefaultVisual(
    Display*		,
    int			
);
extern Visual *XDefaultVisualOfScreen(
    Screen*		
);
extern GC XDefaultGC(
    Display*		,
    int			
);
extern GC XDefaultGCOfScreen(
    Screen*		
);
extern unsigned long XBlackPixel(
    Display*		,
    int			
);
extern unsigned long XWhitePixel(
    Display*		,
    int			
);
extern unsigned long XAllPlanes(
    void
);
extern unsigned long XBlackPixelOfScreen(
    Screen*		
);
extern unsigned long XWhitePixelOfScreen(
    Screen*		
);
extern unsigned long XNextRequest(
    Display*		
);
extern unsigned long XLastKnownRequestProcessed(
    Display*		
);
extern char *XServerVendor(
    Display*		
);
extern char *XDisplayString(
    Display*		
);
extern Colormap XDefaultColormap(
    Display*		,
    int			
);
extern Colormap XDefaultColormapOfScreen(
    Screen*		
);
extern Display *XDisplayOfScreen(
    Screen*		
);
extern Screen *XScreenOfDisplay(
    Display*		,
    int			
);
extern Screen *XDefaultScreenOfDisplay(
    Display*		
);
extern long XEventMaskOfScreen(
    Screen*		
);
extern int XScreenNumberOfScreen(
    Screen*		
);
typedef int (*XErrorHandler) (	    
    Display*		,
    XErrorEvent*	
);
extern XErrorHandler XSetErrorHandler (
    XErrorHandler	
);
typedef int (*XIOErrorHandler) (    
    Display*		
);
extern XIOErrorHandler XSetIOErrorHandler (
    XIOErrorHandler	
);
extern XPixmapFormatValues *XListPixmapFormats(
    Display*		,
    int*		
);
extern int *XListDepths(
    Display*		,
    int			,
    int*		
);
extern Status XReconfigureWMWindow(
    Display*		,
    Window		,
    int			,
    unsigned int	,
    XWindowChanges*	
);
extern Status XGetWMProtocols(
    Display*		,
    Window		,
    Atom**		,
    int*		
);
extern Status XSetWMProtocols(
    Display*		,
    Window		,
    Atom*		,
    int			
);
extern Status XIconifyWindow(
    Display*		,
    Window		,
    int			
);
extern Status XWithdrawWindow(
    Display*		,
    Window		,
    int			
);
extern Status XGetCommand(
    Display*		,
    Window		,
    char***		,
    int*		
);
extern Status XGetWMColormapWindows(
    Display*		,
    Window		,
    Window**		,
    int*		
);
extern Status XSetWMColormapWindows(
    Display*		,
    Window		,
    Window*		,
    int			
);
extern void XFreeStringList(
    char**		
);
extern int XSetTransientForHint(
    Display*		,
    Window		,
    Window		
);
extern Bool XCheckIfEvent(
    Display*		,
    XEvent*		,
    Bool (*) (
	       Display*			,
               XEvent*			,
               XPointer			
             )		,
    XPointer		
);
extern int XIfEvent(
    Display*		,
    XEvent*		,
    Bool (*) (
	       Display*			,
               XEvent*			,
               XPointer			
             )		,
    XPointer		
);
extern int XPeekIfEvent(
    Display*		,
    XEvent*		,
    Bool (*) (
	       Display*		,
               XEvent*		,
               XPointer		
             )		,
    XPointer		
);