xlib/Xlib.nim


proc XInternAtom*(a2: ptr Display; a3: cstring; a4: Bool): Atom {.cdecl, 
    importc: "XInternAtom", dynlib: libX11.}
proc XInternAtoms*(a2: ptr Display; a3: cstringArray; a4: cint; a5: Bool; 
                   a6: ptr Atom): Status {.cdecl, importc: "XInternAtoms", 
    dynlib: libX11.}
proc XCopyColormapAndFree*(a2: ptr Display; a3: Colormap): Colormap {.cdecl, 
    importc: "XCopyColormapAndFree", dynlib: libX11.}
proc XCreateColormap*(a2: ptr Display; a3: Window; a4: ptr Visual; a5: cint): Colormap {.
    cdecl, importc: "XCreateColormap", dynlib: libX11.}
proc XCreatePixmapCursor*(a2: ptr Display; a3: Pixmap; a4: Pixmap; 
                          a5: ptr XColor; a6: ptr XColor; a7: cuint; a8: cuint): Cursor {.
    cdecl, importc: "XCreatePixmapCursor", dynlib: libX11.}
proc XCreateGlyphCursor*(a2: ptr Display; a3: Font; a4: Font; a5: cuint; 
                         a6: cuint; a7: ptr XColor; a8: ptr XColor): Cursor {.
    cdecl, importc: "XCreateGlyphCursor", dynlib: libX11.}
proc XCreateFontCursor*(a2: ptr Display; a3: cuint): Cursor {.cdecl, 
    importc: "XCreateFontCursor", dynlib: libX11.}
proc XLoadFont*(a2: ptr Display; a3: cstring): Font {.cdecl, 
    importc: "XLoadFont", dynlib: libX11.}
proc XCreateGC*(a2: ptr Display; a3: Drawable; a4: culong; a5: ptr XGCValues): GC {.
    cdecl, importc: "XCreateGC", dynlib: libX11.}
proc XGContextFromGC*(a2: GC): GContext {.cdecl, importc: "XGContextFromGC", 
    dynlib: libX11.}
proc XFlushGC*(a2: ptr Display; a3: GC) {.cdecl, importc: "XFlushGC", 
    dynlib: libX11.}
proc XCreatePixmap*(a2: ptr Display; a3: Drawable; a4: cuint; a5: cuint; 
                    a6: cuint): Pixmap {.cdecl, importc: "XCreatePixmap", 
    dynlib: libX11.}
proc XCreateBitmapFromData*(a2: ptr Display; a3: Drawable; a4: cstring; 
                            a5: cuint; a6: cuint): Pixmap {.cdecl, 
    importc: "XCreateBitmapFromData", dynlib: libX11.}
proc XCreatePixmapFromBitmapData*(a2: ptr Display; a3: Drawable; a4: cstring; 
                                  a5: cuint; a6: cuint; a7: culong; a8: culong; 
                                  a9: cuint): Pixmap {.cdecl, 
    importc: "XCreatePixmapFromBitmapData", dynlib: libX11.}
proc XCreateSimpleWindow*(a2: ptr Display; a3: Window; a4: cint; a5: cint; 
                          a6: cuint; a7: cuint; a8: cuint; a9: culong; 
                          a10: culong): Window {.cdecl, 
    importc: "XCreateSimpleWindow", dynlib: libX11.}
proc XGetSelectionOwner*(a2: ptr Display; a3: Atom): Window {.cdecl, 
    importc: "XGetSelectionOwner", dynlib: libX11.}
proc XCreateWindow*(a2: ptr Display; a3: Window; a4: cint; a5: cint; a6: cuint; 
                    a7: cuint; a8: cuint; a9: cint; a10: cuint; a11: ptr Visual; 
                    a12: culong; a13: ptr XSetWindowAttributes): Window {.cdecl, 
    importc: "XCreateWindow", dynlib: libX11.}
proc XListInstalledColormaps*(a2: ptr Display; a3: Window; a4: ptr cint): ptr Colormap {.
    cdecl, importc: "XListInstalledColormaps", dynlib: libX11.}
proc XListFonts*(a2: ptr Display; a3: cstring; a4: cint; a5: ptr cint): cstringArray {.
    cdecl, importc: "XListFonts", dynlib: libX11.}
proc XListFontsWithInfo*(a2: ptr Display; a3: cstring; a4: cint; a5: ptr cint; 
                         a6: ptr ptr XFontStruct): cstringArray {.cdecl, 
    importc: "XListFontsWithInfo", dynlib: libX11.}
proc XGetFontPath*(a2: ptr Display; a3: ptr cint): cstringArray {.cdecl, 
    importc: "XGetFontPath", dynlib: libX11.}
proc XListExtensions*(a2: ptr Display; a3: ptr cint): cstringArray {.cdecl, 
    importc: "XListExtensions", dynlib: libX11.}
proc XListProperties*(a2: ptr Display; a3: Window; a4: ptr cint): ptr Atom {.
    cdecl, importc: "XListProperties", dynlib: libX11.}
proc XListHosts*(a2: ptr Display; a3: ptr cint; a4: ptr Bool): ptr XHostAddress {.
    cdecl, importc: "XListHosts", dynlib: libX11.}
proc XKeycodeToKeysym*(a2: ptr Display; a3: KeyCode; a4: cint): KeySym {.cdecl, 
    importc: "XKeycodeToKeysym", dynlib: libX11.}
proc XLookupKeysym*(a2: ptr XKeyEvent; a3: cint): KeySym {.cdecl, 
    importc: "XLookupKeysym", dynlib: libX11.}
proc XGetKeyboardMapping*(a2: ptr Display; a3: KeyCode; a4: cint; a5: ptr cint): ptr KeySym {.
    cdecl, importc: "XGetKeyboardMapping", dynlib: libX11.}
proc XStringToKeysym*(a2: cstring): KeySym {.cdecl, importc: "XStringToKeysym", 
    dynlib: libX11.}
proc XMaxRequestSize*(a2: ptr Display): clong {.cdecl, 
    importc: "XMaxRequestSize", dynlib: libX11.}
proc XExtendedMaxRequestSize*(a2: ptr Display): clong {.cdecl, 
    importc: "XExtendedMaxRequestSize", dynlib: libX11.}
proc XResourceManagerString*(a2: ptr Display): cstring {.cdecl, 
    importc: "XResourceManagerString", dynlib: libX11.}
proc XScreenResourceString*(a2: ptr Screen): cstring {.cdecl, 
    importc: "XScreenResourceString", dynlib: libX11.}
proc XDisplayMotionBufferSize*(a2: ptr Display): culong {.cdecl, 
    importc: "XDisplayMotionBufferSize", dynlib: libX11.}
proc XVisualIDFromVisual*(a2: ptr Visual): VisualID {.cdecl, 
    importc: "XVisualIDFromVisual", dynlib: libX11.}

proc XInitThreads*(): Status {.cdecl, importc: "XInitThreads", dynlib: libX11.}
proc XLockDisplay*(a2: ptr Display) {.cdecl, importc: "XLockDisplay", 
                                      dynlib: libX11.}
proc XUnlockDisplay*(a2: ptr Display) {.cdecl, importc: "XUnlockDisplay", 
                                        dynlib: libX11.}

proc XInitExtension*(a2: ptr Display; a3: cstring): ptr XExtCodes {.cdecl, 
    importc: "XInitExtension", dynlib: libX11.}
proc XAddExtension*(a2: ptr Display): ptr XExtCodes {.cdecl, 
    importc: "XAddExtension", dynlib: libX11.}
proc XFindOnExtensionList*(a2: ptr ptr XExtData; a3: cint): ptr XExtData {.
    cdecl, importc: "XFindOnExtensionList", dynlib: libX11.}
proc XEHeadOfExtensionList*(a2: XEDataObject): ptr ptr XExtData {.cdecl, 
    importc: "XEHeadOfExtensionList", dynlib: libX11.}

proc XRootWindow*(a2: ptr Display; a3: cint): Window {.cdecl, 
    importc: "XRootWindow", dynlib: libX11.}
proc XDefaultRootWindow*(a2: ptr Display): Window {.cdecl, 
    importc: "XDefaultRootWindow", dynlib: libX11.}
proc XRootWindowOfScreen*(a2: ptr Screen): Window {.cdecl, 
    importc: "XRootWindowOfScreen", dynlib: libX11.}
proc XDefaultVisual*(a2: ptr Display; a3: cint): ptr Visual {.cdecl, 
    importc: "XDefaultVisual", dynlib: libX11.}
proc XDefaultVisualOfScreen*(a2: ptr Screen): ptr Visual {.cdecl, 
    importc: "XDefaultVisualOfScreen", dynlib: libX11.}
proc XDefaultGC*(a2: ptr Display; a3: cint): GC {.cdecl, importc: "XDefaultGC", 
    dynlib: libX11.}
proc XDefaultGCOfScreen*(a2: ptr Screen): GC {.cdecl, 
    importc: "XDefaultGCOfScreen", dynlib: libX11.}
proc XBlackPixel*(a2: ptr Display; a3: cint): culong {.cdecl, 
    importc: "XBlackPixel", dynlib: libX11.}
proc XWhitePixel*(a2: ptr Display; a3: cint): culong {.cdecl, 
    importc: "XWhitePixel", dynlib: libX11.}
proc XAllPlanes*(): culong {.cdecl, importc: "XAllPlanes", dynlib: libX11.}
proc XBlackPixelOfScreen*(a2: ptr Screen): culong {.cdecl, 
    importc: "XBlackPixelOfScreen", dynlib: libX11.}
proc XWhitePixelOfScreen*(a2: ptr Screen): culong {.cdecl, 
    importc: "XWhitePixelOfScreen", dynlib: libX11.}
proc XNextRequest*(a2: ptr Display): culong {.cdecl, importc: "XNextRequest", 
    dynlib: libX11.}
proc XLastKnownRequestProcessed*(a2: ptr Display): culong {.cdecl, 
    importc: "XLastKnownRequestProcessed", dynlib: libX11.}
proc XServerVendor*(a2: ptr Display): cstring {.cdecl, importc: "XServerVendor", 
    dynlib: libX11.}
proc XDisplayString*(a2: ptr Display): cstring {.cdecl, 
    importc: "XDisplayString", dynlib: libX11.}
proc XDefaultColormap*(a2: ptr Display; a3: cint): Colormap {.cdecl, 
    importc: "XDefaultColormap", dynlib: libX11.}
proc XDefaultColormapOfScreen*(a2: ptr Screen): Colormap {.cdecl, 
    importc: "XDefaultColormapOfScreen", dynlib: libX11.}
proc XDisplayOfScreen*(a2: ptr Screen): ptr Display {.cdecl, 
    importc: "XDisplayOfScreen", dynlib: libX11.}
proc XScreenOfDisplay*(a2: ptr Display; a3: cint): ptr Screen {.cdecl, 
    importc: "XScreenOfDisplay", dynlib: libX11.}
proc XDefaultScreenOfDisplay*(a2: ptr Display): ptr Screen {.cdecl, 
    importc: "XDefaultScreenOfDisplay", dynlib: libX11.}
proc XEventMaskOfScreen*(a2: ptr Screen): clong {.cdecl, 
    importc: "XEventMaskOfScreen", dynlib: libX11.}
proc XScreenNumberOfScreen*(a2: ptr Screen): cint {.cdecl, 
    importc: "XScreenNumberOfScreen", dynlib: libX11.}
type 
  XErrorHandler* = proc (a2: ptr Display; a3: ptr XErrorEvent): cint {.cdecl.}

proc XSetErrorHandler*(a2: XErrorHandler): XErrorHandler {.cdecl, 
    importc: "XSetErrorHandler", dynlib: libX11.}
type 
  XIOErrorHandler* = proc (a2: ptr Display): cint {.cdecl.}

proc XSetIOErrorHandler*(a2: XIOErrorHandler): XIOErrorHandler {.cdecl, 
    importc: "XSetIOErrorHandler", dynlib: libX11.}
proc XListPixmapFormats*(a2: ptr Display; a3: ptr cint): ptr XPixmapFormatValues {.
    cdecl, importc: "XListPixmapFormats", dynlib: libX11.}
proc XListDepths*(a2: ptr Display; a3: cint; a4: ptr cint): ptr cint {.cdecl, 
    importc: "XListDepths", dynlib: libX11.}

proc XReconfigureWMWindow*(a2: ptr Display; a3: Window; a4: cint; a5: cuint; 
                           a6: ptr XWindowChanges): Status {.cdecl, 
    importc: "XReconfigureWMWindow", dynlib: libX11.}
proc XGetWMProtocols*(a2: ptr Display; a3: Window; a4: ptr ptr Atom; 
                      a5: ptr cint): Status {.cdecl, importc: "XGetWMProtocols", 
    dynlib: libX11.}
proc XSetWMProtocols*(a2: ptr Display; a3: Window; a4: ptr Atom; a5: cint): Status {.
    cdecl, importc: "XSetWMProtocols", dynlib: libX11.}
proc XIconifyWindow*(a2: ptr Display; a3: Window; a4: cint): Status {.cdecl, 
    importc: "XIconifyWindow", dynlib: libX11.}
proc XWithdrawWindow*(a2: ptr Display; a3: Window; a4: cint): Status {.cdecl, 
    importc: "XWithdrawWindow", dynlib: libX11.}
proc XGetCommand*(a2: ptr Display; a3: Window; a4: ptr cstringArray; 
                  a5: ptr cint): Status {.cdecl, importc: "XGetCommand", 
    dynlib: libX11.}
proc XGetWMColormapWindows*(a2: ptr Display; a3: Window; a4: ptr ptr Window; 
                            a5: ptr cint): Status {.cdecl, 
    importc: "XGetWMColormapWindows", dynlib: libX11.}
proc XSetWMColormapWindows*(a2: ptr Display; a3: Window; a4: ptr Window; 
                            a5: cint): Status {.cdecl, 
    importc: "XSetWMColormapWindows", dynlib: libX11.}
proc XFreeStringList*(a2: cstringArray) {.cdecl, importc: "XFreeStringList", 
    dynlib: libX11.}
proc XSetTransientForHint*(a2: ptr Display; a3: Window; a4: Window): cint {.
    cdecl, importc: "XSetTransientForHint", dynlib: libX11.}
